fix for limited acordeon height on mobile

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -25,7 +25,7 @@
 }
 
 .faq.open .faq-content {
-  max-height: 200px;
+  max-height: 2000px;
 }
 
 .faq .chevron {
